[gd_scene load_steps=8 format=3 uid="uid://bg2k1vujfgla8"]

[ext_resource type="Script" uid="uid://rao5s1p7eo2b" path="res://MiniGames/Hangman/hangman.gd" id="1_add1w"]
[ext_resource type="AudioStream" uid="uid://bbl0ssoejcg0y" path="res://Sounds/tada.wav" id="2_f5fg1"]
[ext_resource type="Texture2D" uid="uid://dfw5ami3j1fwe" path="res://MiniGames/Hangman/HangmanArt/Hangman_man0.png" id="3_fg8ii"]
[ext_resource type="AudioStream" uid="uid://ca8wx37rwj1b7" path="res://Sounds/159408__noirenex__life-lost-game-over.wav" id="3_rtggo"]
[ext_resource type="AudioStream" uid="uid://bwjlxpgsn3w86" path="res://Sounds/Aquire.wav" id="4_ayhfn"]
[ext_resource type="AudioStream" uid="uid://bk6mogk22tf33" path="res://Sounds/retro-video-game-sfx-fail.wav" id="5_tpfc3"]
[ext_resource type="Texture2D" uid="uid://bwrvv1l0erliq" path="res://Assets/hang_guy_background.PNG" id="8_3622x"]

[node name="Hangman" type="Node2D"]
script = ExtResource("1_add1w")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(789.5, 517)
scale = Vector2(9.91406, 10)
texture = ExtResource("8_3622x")

[node name="WordLabel" type="Label" parent="."]
z_index = 4
offset_left = 545.0
offset_top = 268.0
offset_right = 1412.0
offset_bottom = 827.0
theme_override_font_sizes/font_size = 102
text = "_"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="IncorrectLabel" type="Label" parent="."]
z_index = 4
offset_left = 573.0
offset_top = 149.0
offset_right = 904.0
offset_bottom = 202.0
theme_override_font_sizes/font_size = 38
text = "Incorrect guesses:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttemptsLabel" type="Label" parent="."]
z_index = 4
offset_left = 974.0
offset_top = 845.0
offset_right = 1138.0
offset_bottom = 876.0
theme_override_font_sizes/font_size = 22
text = "Attempts left: 6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HangManSprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(381, 470)
scale = Vector2(10, 10)
texture = ExtResource("3_fg8ii")

[node name="MessageLabel" type="Label" parent="."]
z_index = 7
offset_right = 40.0
offset_bottom = 23.0

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
offset_left = 162.0
offset_top = 818.0
offset_right = 462.0
offset_bottom = 851.0
scale = Vector2(1.98, 1.98)
theme_override_font_sizes/font_size = 18
text = "TYPE, TYPE, TYPE (in keyboard)"

[node name="---Sounds---" type="Node" parent="."]

[node name="WinSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_f5fg1")
volume_db = -23.31

[node name="LoseSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rtggo")
volume_db = -11.534
pitch_scale = 1.1

[node name="CorrectSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ayhfn")

[node name="WrongSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tpfc3")
volume_db = -16.472

[node name="BeforeLabel" type="Label" parent="."]
offset_left = 232.0
offset_top = 675.0
offset_right = 667.0
offset_bottom = 785.0
theme_override_font_sizes/font_size = 80

[node name="hangbackground" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(798, 516)
scale = Vector2(10, 10)
texture = ExtResource("8_3622x")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 146.0
offset_top = 150.0
offset_right = 274.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 10)
texture = ExtResource("8_3622x")
stretch_mode = 5
